@@ -14,6 +14,7 @@
           passed into $c->uri_for as Args/CaptureArgs (t0m)
         - Fix development server so that $c->engine->env returns the correct
           environment (t0m)
+        - Require Moose 0.78 to fix metaclass incompatibility issues (t0m)
 
 5.80003 2009-04-29 16:23:53
         - Various POD tweaks. (hdp, dandv)
